运行时插件配置完成

--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,7 +1,7 @@
 .login-container {
   position: relative;
   height: 100vh;
-  background: -webkit-linear-gradient(top, #fff6f2 0, #fbdd9f 120%);
+  background: -webkit-linear-gradient(top, #fff6f2 0, #91caff 120%);
   .content {
     position: absolute;
     top: 0;
