等待接口完成

--- a/src/global.less
+++ b/src/global.less
@@ -29,7 +29,28 @@
     min-height: 65px !important;
   }
 }
+.@{ant-prefix}-pro-top-nav-header-main {
+  padding-left: 0;
+}
+.@{ant-prefix}-pro-top-nav-header-logo {
+  padding-left: 40px;
+  background: #002140;
+  a {
+    h1 {
+      color: #fff !important;
+      padding-right: 60px;
+      font-size: 24px !important;
+    }
+  }
+}
+.@{ant-prefix}-layout-content {
+  height: 100% !important;
+  padding: 0 !important;
+}
 
+#root {
+  height: 100%;
+}
 // #root {
 //     height: 100%;
 
