密码修改功能完成

--- a/src/global.less
+++ b/src/global.less
@@ -38,7 +38,7 @@
   a {
     h1 {
       color: #fff !important;
-      padding-right: 60px;
+      padding-right: 80px;
       font-size: 24px !important;
     }
   }
@@ -46,6 +46,15 @@
 .@{ant-prefix}-layout-content {
   height: 100% !important;
   padding: 0 !important;
+}
+.@{ant-prefix}-pro-top-nav-header {
+  background-color: #fff;
+}
+.@{ant-prefix}-pro-top-nav-header-main {
+  padding-left: 0 !important;
+}
+.@{ant-prefix}-pro-top-nav-header .anticon {
+  color: inherit !important;
 }
 
 #root {
