--- a/src/style/variables.less
+++ b/src/style/variables.less
@@ -8,7 +8,7 @@
 //默认层级
 @base-z-index: 999;
 //横向布局纵向布局时菜单背景色
-@base-menu-background: #001529;
+@base-menu-background: #ffffff;
 //菜单文字颜色
 @base-menu-color: hsla(0, 0%, 100%, 0.95);
 //菜单选中文字颜色
