--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,3 +1,7 @@
-.title {
-  background: rgb(121, 242, 157);
+.basic-layout {
+  position: relative;
+  flex: 1;
+  padding: 20px;
+  height: calc(100vh - 105px);
+  overflow: auto;
 }
