--- a/src/pages/personal-center/index.less
+++ b/src/pages/personal-center/index.less
@@ -1,42 +1,48 @@
-.base-setting {
-  position: relative;
-  height: 360px;
+.personal-center {
+  background-color: #fff;
+  width: 1000px;
+  padding: 40px;
+  margin: 40px auto;
+  .base-setting {
+    position: relative;
+    height: 360px;
 
-  .wrap-form {
-    width: 60%;
-  }
-
-  .wrap-photo {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    width: 180px;
-    height: 180px;
-    overflow: hidden;
-    cursor: pointer;
-    border-radius: 50%;
-    box-shadow: 0 0 10px #ccc;
-
-    & img {
-      width: 100%;
-      height: 100%;
+    .wrap-form {
+      width: 60%;
     }
 
-    .wrap-photo-plus {
+    .wrap-photo {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      font-size: 46px;
-      color: #fff;
-      opacity: 0;
-      transition: 500ms;
-      transform: translate(-50%, -50%);
-    }
-  }
+      top: 30px;
+      right: 30px;
+      width: 180px;
+      height: 180px;
+      overflow: hidden;
+      cursor: pointer;
+      border-radius: 50%;
+      box-shadow: 0 0 10px #ccc;
 
-  .wrap-photo:hover {
-    .wrap-photo-plus {
-      opacity: 1;
+      & img {
+        width: 100%;
+        height: 100%;
+      }
+
+      .wrap-photo-plus {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        font-size: 46px;
+        color: #fff;
+        opacity: 0;
+        transition: 500ms;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    .wrap-photo:hover {
+      .wrap-photo-plus {
+        opacity: 1;
+      }
     }
   }
 }
