--- a/src/global.less
+++ b/src/global.less
@@ -19,6 +19,7 @@
         font-size: 12px;
     }
 }
+
 .skeleton.media-block {
     font-size: 19px;
 
@@ -29,12 +30,19 @@
         min-height: 65px !important;
     }
 }
+
 .@{ant-prefix}-pro-top-nav-header-main-left {
     width: 200px;
 }
+
 .@{ant-prefix}-pro-layout-content {
     padding: 0 !important;
 }
+
+.project-name {
+    color: #1b9aee;
+}
+
 // .@{ant-prefix}-layout-content {
 //   background-color: #fff !important;
 // }
@@ -69,6 +77,7 @@
 #root {
     height: 100%;
 }
+
 // #root {
 //     height: 100%;
 
