--- a/src/pages/personal-center/index.less
+++ b/src/pages/personal-center/index.less
@@ -23,6 +23,14 @@
             box-shadow: 0 0 10px #ccc;
             cursor: pointer;
 
+            :global {
+                .@{ant-prefix}-upload {
+                    width: 180px;
+                    height: 180px;
+                    border-radius: 50%;
+                }
+            }
+
             & img {
                 width: 100%;
                 height: 100%;
