--- a/src/pages/project-manage/index.less
+++ b/src/pages/project-manage/index.less
@@ -1,6 +1,6 @@
 .project-manage {
     margin: 24px;
-    background: #fff;
+    // background: #fff;
     height: 100%;
-    padding: 16px;
+    // padding: 16px;
 }
