--- a/src/pages/project-manage/list/components/project-edit/index.less
+++ b/src/pages/project-manage/list/components/project-edit/index.less
@@ -8,18 +8,18 @@
             justify-content: space-between;
         }
 
-        ::v-deep .el-form-item__label {
-            padding-bottom: 0px;
-        }
+        // ::v-deep .el-form-item__label {
+        //     padding-bottom: 0px;
+        // }
 
         .foot {
             text-align: right;
         }
+    }
 
-        .user-info {
-            display: flex;
-            align-items: center;
-        }
+    .user-info {
+        display: flex;
+        align-items: center;
     }
 
     .preference {
@@ -46,6 +46,10 @@
             justify-content: space-between;
             width: 260px;
             margin-top: 20px;
+        }
+
+        .color-light {
+            color: rgba(0, 0, 0, 0.45);
         }
     }
 
