--- a/src/pages/project-manage/template/index.less
+++ b/src/pages/project-manage/template/index.less
@@ -1,17 +1,18 @@
 .project-template {
     position: relative;
-    padding: 20px;
+    padding: 16px;
+    background: #fff;
 
     .create-template {
         position: absolute;
-        top: 13px;
-        right: 20px;
+        top: 20px;
+        right: 16px;
     }
 
     .list {
         .item-list {
             display: flex;
-            height: 50px;
+            height: 80px;
             padding: 12px 0;
             border-bottom: 1px solid #ccc;
 
@@ -26,7 +27,7 @@
             }
 
             .item-info {
-                width: 160px;
+                width: 200px;
                 margin-left: 10px;
                 line-height: 25px;
             }
@@ -48,6 +49,10 @@
                 display: flex;
                 align-items: center;
                 width: 130px;
+            }
+
+            .color-light {
+                color: rgba(0, 0, 0, 0.45);
             }
         }
     }
