--- a/src/pages/workbench/components/user-info/index.less
+++ b/src/pages/workbench/components/user-info/index.less
@@ -14,6 +14,9 @@
 
         .user-avatar {
             margin-right: 20px;
+            height: 64px;
+            width: 64px;
+            border-radius: 32px;
         }
 
         .info {
