--- a/src/pages/project-manage/list/index.less
+++ b/src/pages/project-manage/list/index.less
@@ -1,12 +1,13 @@
 .project-list {
     position: relative;
     min-height: 790px;
-    // padding: 20px;
+    padding: 16px;
+    background: #fff;
 
     .create-project {
         position: absolute;
-        top: 13px;
-        right: 20px;
+        top: 20px;
+        right: 16px;
     }
 
     .list {
