--- a/src/pages/workbench/components/my-project/index.less
+++ b/src/pages/workbench/components/my-project/index.less
@@ -22,7 +22,7 @@
 
         .item-project {
             position: relative;
-            width: calc(25% - 1px - 20px);
+            width: calc(25%);
             height: 100%;
             padding: 10px;
             overflow: hidden;
@@ -59,6 +59,7 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                    border: #ccc 1px solid;
                 }
             }
 
@@ -75,6 +76,7 @@
                 justify-content: space-between;
                 padding-top: 10px;
                 line-height: 20px;
+
                 .username {
                 }
 
