--- a/src/pages/workbench/components/my-task/index.less
+++ b/src/pages/workbench/components/my-task/index.less
@@ -40,8 +40,12 @@
                 color: #1b9aee;
                 cursor: pointer;
             }
+
             .project-name {
                 width: 100px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
                 color: rgba(0, 0, 0, 0.45);
                 cursor: pointer;
 
